--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,15 @@ jobs:
       with:
         swap-size-gb: 12
 
-    - name: Free up storage
-      uses: rokibhasansagar/slimhub_actions@main
+    - name: Maximize build space
+      uses: easimon/maximize-build-space@master
+      with:
+        root-reserve-mb: 8192
+        temp-reserve-mb: 2048
+        remove-dotnet: 'true'
+        remove-android: 'true'
+        remove-haskell: 'true'
+        remove-codeql: 'true'
 
     - name: Build
       run: |
