--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,20 +40,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Swap Space
-      uses: pierotofy/set-swap-space@master
-      with:
-        swap-size-gb: 12
-
     - name: Maximize build space
-      uses: easimon/maximize-build-space@master
+      uses: AdityaGarg8/remove-unwanted-software@v4.1
       with:
-        root-reserve-mb: 8192
-        temp-reserve-mb: 2048
         remove-dotnet: 'true'
         remove-android: 'true'
         remove-haskell: 'true'
         remove-codeql: 'true'
+        remove-cached-tools: 'true'
+        remove-docker-images: 'true'
 
     - name: Build
       run: |
