--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,15 +3,15 @@ name: Build GKI
 on:
   workflow_dispatch:
    inputs:
-    LTO:
-     description: 'LTO Type'
+
+    STATUS:
+     description: 'Build Status'
      required: true
      default: ''
      type: choice
      options:
-     - 'full'
-     - 'thin'
-     - 'none'
+     - 'BETA'
+     - 'STABLE'
 
     KSU:
      description: 'KSU'
@@ -22,25 +22,14 @@ on:
     KSUNEXT:
      description: 'KSU-Next (WIP)'
      required: false
-     default: false
-     type: boolean
-
-     
-    KSUNEXTCI:
-     description: 'KSU-Next-Ci'
-     required: false
-     default: false
+     default: true
      type: boolean
 
     SUSFS4KSU:
      description: 'SUSFS4KSU'
      required: false
-     default: false
+     default: true
      type: boolean
-
-    NOTE:
-     description: 'Release Note'
-     required: false
 
 jobs:
   build:
@@ -51,41 +40,41 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Swap Space
+    - name: Maximize build space
+      uses: AdityaGarg8/remove-unwanted-software@v4.1
+      with:
+        remove-dotnet: 'true'
+        remove-android: 'true'
+        remove-haskell: 'true'
+        remove-codeql: 'true'
+        remove-cached-tools: 'true'
+        remove-docker-images: 'true'
+        remove-large-packages: 'true'
+
+    - name: Set Swap Space
       uses: pierotofy/set-swap-space@master
       with:
-        swap-size-gb: 12
-
-    - name: Free up storage
-      uses: rokibhasansagar/slimhub_actions@main
-
+        swap-size-gb: 10
+          
     - name: Build
       run: |
-       [ -x "build.sh" ] || chmod a+x build.sh
-       [ -x "telegram_functions.sh" ] || chmod a+x telegram_functions.sh
+       [[ -x "build.sh" ]] || chmod a+x build.sh
+       [[ -x "telegram_functions.sh" ]] || chmod a+x telegram_functions.sh
 
-       export LTO_TYPE="${{ inputs.LTO }}"
-
-       if [ "${{ inputs.SUSFS4KSU }}" == "true" ]; then
+       if [[ "${{ inputs.SUSFS4KSU }}" == "true" ]]; then
             export USE_KSU_SUSFS="yes"
        fi
 
-       if [ "${{ inputs.KSU }}" == "true" ]; then
+       if [[ "${{ inputs.KSU }}" == "true" ]]; then
             export USE_KSU="yes"
        fi
 
-       if [ "${{ inputs.KSUNEXT }}" == "true" ]; then
+       if [[ "${{ inputs.KSUNEXT }}" == "true" ]]; then
             export USE_KSU_NEXT="yes"
        fi
 
-       if [ "${{ inputs.KSUNEXTCI }}" == "true" ]; then
-            export USE_KSU_NEXT_CI="yes"
-       fi
-
-       if [ -n "${{ inputs.NOTE }}" ]; then
-            export NOTE="${{ inputs.NOTE }}"
-       fi
-
+       export STATUS="${{ inputs.STATUS }}"
        export chat_id="${{ secrets.CHAT_ID }}"
        export token="${{ secrets.TOKEN }}"
+
        ./build.sh
